k3s/minio/minio-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: idemiafoot
spec:
  type: ClusterIP
  ports:
    - name: minio-api
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: minio-console
      port: 9001
      targetPort: 9001
      protocol: TCP
  selector:
    app: minio

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: idemiafoot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:latest
        args:
          - server 
          - --console-address
          - :9001
          - /data
        ports:
          - containerPort: 9001
        volumeMounts:
          - name: storage
            mountPath: "/data"
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-ingressroute
  namespace: idemiafoot
spec:
  entryPoints:
    - websecure
  routes:
    # - match: Host(`s3.dev.foot-idemia.fr`)
    #   kind: Rule
    #   services:
    #     - name: minio
    #       port: 9000
    - match: Host(`s3.dev.foot-idemia.fr`)
      kind: Rule
      services:
        - name: minio
          port: 9001
  tls:
    secretName: minio-tls
